Refactoring tests, internal proxy tests